# distributed-asr-serving

./: .gitignore  config.py  pyproject.toml
data/audio_transcripts/: audio_file_1.txt
docs/adr/: 001-use-fastapi.md
src/: main.py  test.py
