[project]
name = "distributed-asr-serving"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.3",
    "librosa==0.10.2",
    "numba==0.58.1",
    "torch==2.2.2",
    "tqdm>=4.67.3",
    "transformers==4.41.2",
]
